[gd_scene load_steps=8 format=2]

[ext_resource path="res://app/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://app/Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://app/FollowerGroup.tscn" type="PackedScene" id=3]
[ext_resource path="res://app/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://app/Main.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/music.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/conversion.wav" type="AudioStream" id=7]

[node name="Main" type="Node"]
script = ExtResource( 5 )
FollowerGroup = ExtResource( 3 )

[node name="Menu" parent="." instance=ExtResource( 2 )]

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 966.659, 660.807 )
follower_gain_rate = 20

[node name="SpawnFollowerTimer" type="Timer" parent="."]
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="ConvertSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="mute" from="Menu" to="." method="_on_Menu_mute"]
[connection signal="pause" from="Menu" to="." method="_on_Menu_pause"]
[connection signal="restart" from="Menu" to="." method="_on_Menu_restart"]
[connection signal="started" from="Menu" to="." method="_on_Menu_started"]
[connection signal="unmute" from="Menu" to="." method="_on_Menu_unmute"]
[connection signal="unpause" from="Menu" to="." method="_on_Menu_unpause"]
[connection signal="timeout" from="SpawnFollowerTimer" to="." method="_on_SpawnFollowerTimer_timeout"]
